# Fin-News-Report

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
backend/: function_app.py  requirements.txt
backend/analyzer/: exceptions.py  gemini_analyzer.py  models.py  prompt_builder.py
backend/api/: news_handler.py  subscribe_handler.py
backend/deduplicator/: deduplicator.py
backend/fetcher/: exceptions.py  models.py  rss_fetcher.py  sources.py
backend/notifier/: email_notifier.py  models.py
backend/notifier/templates/: daily_digest.html  quota_exceeded.html
backend/orchestrator/: models.py  pipeline.py
backend/storage/: abstract_storage.py  blob_storage.py  in_memory_storage.py  models.py
backend/tests/: test_analyzer.py  test_api.py  test_deduplicator.py  test_fetcher.py  test_notifier.py  test_pipeline.py  test_storage.py
docs/: deploy.md  detailed-design.md  proposal.md
docs/prompt/: prompt.md
docs/tasks/: m0-project-setup.md  m1-rss-fetcher.md  m10-subscribe-page.md  m11-shared-components.md  m2-deduplicator.md  m3-ai-analyzer.md  m4-storage.md  m5-email-notifier.md  m6-orchestrator.md  m7-http-api.md  m8-news-list-page.md  m9-history-page.md  progress.md
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/app/history/: page.tsx
frontend/components/: ArticleCard.tsx  CategorySection.tsx  DatePicker.tsx  LoadingSkeleton.tsx  SubscribeForm.tsx
frontend/lib/: api.ts
frontend/types/: news.ts
scripts/: smoke_test.py
(+7 files in other folders)
