[project]
name = "fin-news-backend"
version = "0.1.0"
description = "台灣財經新聞每日彙整 App — Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions",
    "azure-storage-blob",
    "azure-communication-email",
    "feedparser",
    "httpx",
    "jinja2",
    "email-validator",
    "python-dotenv>=1.2.2",
    "google-genai>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
